--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-r" data-rv-view="47">
+<section id="ext_menu-r" data-rv-view="50">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web design software</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-1a" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-1a" data-rv-view="54" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -76,7 +76,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-s" data-rv-view="49" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-s" data-rv-view="52" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;<a href="page4.html">Terms and Conditions</a> &nbsp;<a href="page5.html">Privacy Policy</a> &nbsp;<a href="page1.html">FAQ</a> &nbsp;<a href="page3.html">Contact</a> &nbsp;<a href="page2.html">About Us</a><br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
