--- a/page5.html
+++ b/page5.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-z" data-rv-view="63">
+<section id="ext_menu-z" data-rv-view="82">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="86" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -93,7 +93,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="65" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="84" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;<a href="page4.html">Terms and Conditions</a> &nbsp;<a href="page5.html">Privacy Policy</a> &nbsp;<a href="page1.html">FAQ</a> &nbsp;<a href="page3.html">Contact</a> &nbsp;<a href="page2.html">About Us</a><br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
