--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logobittasia-105x106.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logobittasia-105x106.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="index.html">Bittasia Exchange</a>
                     </div>
 
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/1-bnxhrv0vqcqjqpze6escsq-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/1-bnxhrv0vqcqjqpze6escsq-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(71, 85, 119);">
     </div>
@@ -327,7 +327,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Bittasia Investment Opportunity">
-                                    <input type="hidden" value="ZjH/l/73rWmkODb+0GAFHrfeKFn7sye6PwykBA7st4b6aJsTpbQHc6H0zi2eZZqm0zAlufCHH/+1HZiKhNbqYq0XS6mED4ZVOonB5KVVNKU8h4yJ51S95eZN8NC4mUm7" data-form-email="true">
+                                    <input type="hidden" value="EsVutS1bkqbxWyAFAeNsR7sJQfUN7swzijeh5lYuWjVo8dgcmrRxPM588FGIco/+k3zVWYOat3eAOoJw82sowmJ7/Bh1IbethLvRvYM0k2VbXhaW3LFTLMbaPk83BlhG" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
                                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
