--- a/page3.html
+++ b/page3.html
@@ -34,7 +34,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logobittasia-105x106.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logobittasia-105x106.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="index.html">Bittasia Exchange</a>
                     </div>
 
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="66" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="66" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="Bittasia Exchange">
-                                <input type="hidden" value="4XxP05PYb8RB42XFKa49SZUaYcM0cW7s7OTkwCgEpYnq4lXWe8lB9VvIXVttsQOTTTIJmhNh8HVaVoLWIePxhYIJQaZeesW+gdCzNeo8NYmd3sqrZjxCdpXsiBuMCUp5" data-form-email="true">
+                                <input type="hidden" value="1fcpOG6F3MQUf/pXX0+4dF+JtwWb8R3T6u+9YtwCe2Hj2Fb1+0OuYeNRyhoyZH+trY38+KApCGTegIvFUG1YomtX9K3Ow95keAMpEtziMiXorCM98uJej9r+JzBK32Nb" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
