--- a/page4.html
+++ b/page4.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logobittasia-105x106.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logobittasia-105x106.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="index.html">Bittasia Exchange</a>
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
