--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="66" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/e">web maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="66" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="Bittasia Exchange">
-                                <input type="hidden" value="x1QLIUC15cGZ8yj3vB2DXUpRZ4MNVPfyYYK4RVfF5ueE7fblpU0G3oCKDu9FrwvOEM+fU/OozZRO3qTXZ+RJYROA8bZ3V76xJ2iYWHFp31hh0ntOsBD/07jfaEP29C/W" data-form-email="true">
+                                <input type="hidden" value="oBygKBG82qLZnuQTY/egCTOh6AzFoBsGp1qbfiZ7r/+RHVVss62H3x3HTN6zYZ43UQzRG1j6KJaCZKZ450KRXsl7RZ4/ZbtdnNsnkIkBgIM3KnHyWag0pJ6km/AdC6/K" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -116,7 +116,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="64" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;<a href="page4.html">Terms and Conditions</a> &nbsp;<a href="page5.html">Privacy Policy</a> &nbsp;<a href="page1.html">FAQ</a> &nbsp;<a href="page3.html">Contact</a> &nbsp;<a href="page2.html">About Us</a><br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
+        <p>&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="page1.html">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>Bittasia Exchange. Bahnhofstrasse 21, 6300 Zug, Switzerland<br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
     </div>
 </footer>
 
