--- a/page4.html
+++ b/page4.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/c">free web site maker</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -182,7 +182,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-y" data-rv-view="78" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;<a href="page4.html">Terms and Conditions</a> &nbsp;<a href="page5.html">Privacy Policy</a> &nbsp;<a href="page1.html">FAQ</a> &nbsp;<a href="page3.html">Contact</a> &nbsp;<a href="page2.html">About Us</a><br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
+        <p>&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="page1.html">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>Bittasia Exchange. Bahnhofstrasse 21, 6300 Zug, Switzerland<br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
     </div>
 </footer>
 
