--- a/page5.html
+++ b/page5.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="86" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/d">free web page software</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="86" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -96,7 +96,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="84" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>&nbsp;<a href="page4.html">Terms and Conditions</a> &nbsp;<a href="page5.html">Privacy Policy</a> &nbsp;<a href="page1.html">FAQ</a> &nbsp;<a href="page3.html">Contact</a> &nbsp;<a href="page2.html">About Us</a><br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
+        <p>&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="page1.html">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>Bittasia Exchange. Bahnhofstrasse 21, 6300 Zug, Switzerland<br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
     </div>
 </footer>
 
