--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/1-bnxhrv0vqcqjqpze6escsq-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/e">website development software</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/1-bnxhrv0vqcqjqpze6escsq-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(71, 85, 119);">
     </div>
@@ -76,7 +76,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Notices:</p><p>Bittasia Initial Exchange Offering will be starting on 21 Feb 2018. Limited public offering at 18,000,000 tokens. 1 BTSA Token = USD $1</p><p>1. Fast Instant Cryptocurrency Exchange</p><p>2. Revenue sharing investment opportunity (Limted !)</p><p><br></p><p>Daily global trading volume ~20 Billion</p><p>Bittasia target is daily trading volume of 100 M, which is 0.5% of the global daily volume.</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Notices:</p><p>Bittasia Initial Exchange Offering will be starting on 21 Feb 2018. Limited public offering at 18,000,000 tokens. 1 BTSA Token = USD $1</p><p>1. Fast Instant Cryptocurrency Exchange</p><p>2. Revenue sharing investment opportunity (Limted !)</p><p><br></p><p>Daily global trading volume ~20 Billion.</p><p>Bittasia's target is daily trading volume of 100 M, which is 0.5% of the global daily volume.</p></blockquote></div>
         </div>
     </div>
 
@@ -351,7 +351,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Bittasia Investment Opportunity">
-                                    <input type="hidden" value="mHqluanHZTs8fqFHAxZRVADqCUIQ09SXz704HPp+33MrqlakOXTNTK9iaSMV9xw9sG9RMk6sJZKAT0TDFZhGu7KTS8vHUzTMirlaOfuLi8nQkll98QmjIce1rPeMXvOj" data-form-email="true">
+                                    <input type="hidden" value="ViC9Rp1RANUahTGviYDY8bR8ucK4IWu3VzajibV/gN8yQyGKOID9KMR1tpyTGnREP9jBbCr6smzSj95DjPAWIIb5rWiPWnvSzorx1C+9s8zEG0UYtFPhZ7CL+0A16JKE" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
                                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
