create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/1-bnxhrv0vqcqjqpze6escsq-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/1-bnxhrv0vqcqjqpze6escsq-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(71, 85, 119);">
     </div>
@@ -76,7 +76,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Notices:</p><p>Bittasia Initial Exchange Offering will be starting on 21 Feb 2018. Limited public offering at 18,000,000 tokens. 1 BTSA Token = USD $1</p><p>1. Fast Instant Cryptocurrency Exchange</p><p>2. Revenue sharing investment opportunity (Limted !)</p><p><br></p><p>Daily global trading volume ~20 Billion.</p><p>Bittasia's target is daily trading volume of 100 M, which is 0.5% of the global daily volume.</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Notices:</p><p>Bittasia Initial Exchange Offering will be starting on 01 March 2018. Limited public offering at 18,000,000 tokens. 1 BTSA Token = USD $1</p><p>1. Fast Instant Cryptocurrency Exchange</p><p>2. Revenue sharing investment opportunity (Limted !)</p><p><br></p><p>Daily global trading volume ~20 Billion.</p><p>Bittasia's target is daily trading volume of 100 M, which is 0.5% of the global daily volume.</p></blockquote></div>
         </div>
     </div>
 
@@ -351,7 +351,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Bittasia Investment Opportunity">
-                                    <input type="hidden" value="IIzBFb6Z/c8qD7T8uZ0P3PXzsLw/ZFFL9lj8AhkY6XTOVgPPrxOHDJ0mrR7UWWTY7Nx3PqpEyjk9Ez1cqHPAvPTU9hFkh485ie3Y1nui9Oxu+kO2JI0X0VxbPJuTb35K" data-form-email="true">
+                                    <input type="hidden" value="xXoHys1yfWhqBZfDYuT2hGiDpXIq1By3ogPUCz9YqJOb5UWj45G7IeAtBalBXRgHyoa++mV/4oKB9dvetnZO3bL+C3MK9MGleEOMXT/EbQ2Yvfcr3Gk3JBZ16gLWAiyA" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
                                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -373,7 +373,7 @@
     </div>
 
     <div class="container">
-        <h3 class="mbr-section-title display-2">Bittasia Exchange IEO<br>Initial Exchange Offering<br>Starting 21 Feb 2018<br>Ending &nbsp;31 May 2018</h3>
+        <h3 class="mbr-section-title display-2">Bittasia Exchange IEO<br>Initial Exchange Offering<br>Starting 1 March 2018<br>Ending &nbsp;31 May 2018</h3>
         <div class="countdown" data-end="2018/05/31"></div>
     </div>
 </section>
@@ -426,7 +426,7 @@
 
     <div class="container table-wrapper" info3-text="(filtered from" data-search="false" search-text="Search:" info1-text="Showing" info2-text="entries" info4-text="total entries)">
         
-        <table class="table" cellspacing="0" width="100%"><thead><tr><th>Subject</th><th>Details</th></tr></thead><tbody><tr><td><strong>Token</strong></td><td><strong>Bittasia</strong></td></tr><tr><td><strong>Symbol</strong></td><td><strong>BTSA</strong></td></tr><tr><td><strong>Network</strong></td><td><strong>Ethereum</strong></td></tr><tr><td><strong>Total Supply</strong></td><td><strong>20,000,000</strong></td></tr><tr><td><strong>Circulating</strong></td><td><strong>18,000,000</strong></td></tr><tr><td><strong>Offering Start</strong></td><td><strong>21 Feb 2018</strong></td></tr><tr><td><strong>Offering End</strong></td><td><strong>31 May 2018</strong></td></tr><tr><td><strong>Minimum Invest</strong></td><td><strong>USD 100</strong></td></tr><tr><td><strong>Maximum Invest</strong></td><td><strong>USD 1 Million</strong></td></tr><tr><td><strong>Currency&nbsp;</strong></td><td><strong>ETHER</strong></td></tr><tr><td><strong>Platform</strong></td><td><strong>Bittasia Exchange</strong></td></tr><tr><td><strong>Peer</strong></td><td><strong>Wallet to Wallet</strong></td></tr><tr><td><strong>Status</strong></td><td><strong>Working</strong></td></tr></tbody></table>
+        <table class="table" cellspacing="0" width="100%"><thead><tr><th>Subject</th><th>Details</th></tr></thead><tbody><tr><td><strong>Token</strong></td><td><strong>Bittasia</strong></td></tr><tr><td><strong>Symbol</strong></td><td><strong>BTSA</strong></td></tr><tr><td><strong>Network</strong></td><td><strong>Ethereum</strong></td></tr><tr><td><strong>Total Supply</strong></td><td><strong>20,000,000</strong></td></tr><tr><td><strong>Circulating</strong></td><td><strong>18,000,000</strong></td></tr><tr><td><strong>Offering Start</strong></td><td><strong>01 March 2018</strong></td></tr><tr><td><strong>Offering End</strong></td><td><strong>31 May 2018</strong></td></tr><tr><td><strong>Minimum Invest</strong></td><td><strong>USD 100</strong></td></tr><tr><td><strong>Maximum Invest</strong></td><td><strong>USD 1 Million</strong></td></tr><tr><td><strong>Currency&nbsp;</strong></td><td><strong>ETHER</strong></td></tr><tr><td><strong>Platform</strong></td><td><strong>Bittasia Exchange</strong></td></tr><tr><td><strong>Peer</strong></td><td><strong>Wallet to Wallet</strong></td></tr><tr><td><strong>Status</strong></td><td><strong>Working</strong></td></tr></tbody></table>
         
     </div>
 </section>
@@ -446,7 +446,7 @@
             <ul class="timeline">
                 <li class="timeline-normal separline" style="display: block;">
                     <div class="date date-normal">
-                        <p class="mbr-section-text-gray lead h-black"><strong>21 Feb 2018</strong></p>
+                        <p class="mbr-section-text-gray lead h-black"><strong>01 March 2018</strong></p>
                     </div>
                     <span class="iconBackground first_span"><span class="icon"><span class="etl-icon icon-layers mbr-iconfont-extFeatures2" style="color: #666666"></span></span></span>
                     <div class="timeline-panel">
