create github pages

--- a/page3.html
+++ b/page3.html
@@ -9,10 +9,10 @@
   <link rel="shortcut icon" href="assets/images/logobittasia-105x106.png" type="image/x-icon">
   <meta name="description" content="Web Creator Description">
   <title>Contact</title>
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-v" data-rv-view="72">
+<section id="ext_menu-v" data-rv-view="71">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="76" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="75" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="Bittasia Exchange">
-                                <input type="hidden" value="Dr3PjoF4Aee3pDiEFVoGcXqh5/VygeDs99ChgUFyFa3RLOIPRxgSbh3KIO5KLz1OB1jyje9rBNh9mmXpoWVFX/jDDVOWUuWEnkIrkS5aVHLxVv8mPsTSI50mC7Txdf7F" data-form-email="true">
+                                <input type="hidden" value="pwppwtszdDUBGB169i8cX8sxc/jmWH4uTsyR/bnvx7Pk6sHPkjC98ClAobX24ybB3rkXM5c9GQ4D+m9g6VBiNvSsnXv5MLbnO0NHpwJ/Ee8l4bYe2zafmmEg+kQ34u5Q" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -113,7 +113,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="74" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="73" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="page1.html">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp; &nbsp;<a href="page2.html">About Us</a><br>Bittasia Exchange. Bahnhofstrasse 21, 6300 Zug, Switzerland<br>Copyright (c) 2018 Bittasia Exchange&nbsp;All rights reserved</p>
@@ -124,10 +124,8 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/countdown/jquery.countdown.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
@@ -136,6 +134,5 @@
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
-  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
